# orion-network

./: .gitignore  .gitmodules  .rgignore  :w  Cargo.toml  README.md  WHITEPAPER.md  \  perf.data  project_description.md  rustc-ice-2023-11-30T17_16_59-90532.txt  rustc-ice-2023-11-30T17_16_59-90533.txt  rustc-ice-2023-11-30T20_41_20-111885.txt  rustc-ice-2023-11-30T20_41_20-111902.txt  rustc-ice-2023-11-30T20_41_20-111925.txt  rustc-ice-2023-12-08T19_55_11-221186.txt  rustc-ice-2023-12-12T21_24_13-1732230.txt  rustc-ice-2023-12-12T21_24_32-1732398.txt  rustc-ice-2023-12-12T21_24_43-1732504.txt  rustc-ice-2023-12-12T21_24_56-1732676.txt  rustc-ice-2023-12-12T21_25_20-1732948.txt  rustc-ice-2023-12-12T21_25_27-1733053.txt  rustc-ice-2023-12-12T21_27_56-1734899.txt  rustc-ice-2023-12-13T13_32_56-2012197.txt  rustfmt.toml  serve.sh
.cargo/: config.toml
contracts/node_staker/: Cargo.toml  lib.rs
contracts/user_manager/: Cargo.toml  lib.rs
core/chain-api/: Cargo.toml  metadata.scale
core/chain-api/src/: lib.rs
core/chain-types/: Cargo.toml
core/chain-types/src/: lib.rs
core/chat-logic/: Cargo.toml
core/chat-logic/src/: extractors.rs  impls.rs  lib.rs
core/chat-logic/src/impls/: chat.rs  profile.rs  search_peers.rs  storage.rs
core/chat-logic/src/impls/storage/: chat.rs  nodes.rs  profile.rs  replication.rs
core/chat-spec/src/: lib.rs
core/crypto/: Cargo.toml
core/crypto/src/: enc.rs  hash.rs  lib.rs  merkle.rs  sign.rs
core/dht/: Cargo.toml
core/dht/src/: lib.rs
core/mini-dht/: Cargo.toml
core/mini-dht/src/: lib.rs
core/onion/: Cargo.toml
core/onion/src/: behaviour.rs  handler.rs  key_share.rs  lib.rs  packet.rs  tests.rs
core/primitives/: Cargo.toml
core/primitives/src/: contracts.rs  lib.rs
core/rpc/: Cargo.toml
core/rpc/src/: lib.rs
core/storage-spec/: Cargo.toml
core/storage-spec/src/: berkleamp_wench.rs  db.rs  lib.rs  metabase.rs  sorted_compact_vec.rs
core/storage-spec/src/metabase/: disk_pool.rs
core/streaming/: Cargo.toml
core/streaming/src/: lib.rs
nodes/chain-mock/: Cargo.toml
nodes/chain-mock/src/: main.rs
nodes/client/: Cargo.toml  index.html
nodes/client/assets/: login-file.html  login.html  profile.html  register-file.html  register.html  script.js  style.css
nodes/client/src/: chain.rs  chat.rs  db.rs  login.rs  main.rs  node.rs  profile.rs  protocol.rs
nodes/client/wallet-integration/: index.html  integration.js  package-lock.json  test-mnemonic.txt
nodes/miner/: Cargo.toml
nodes/miner/src/: handlers.rs  main.rs  white_list.rs
nodes/miner/src/handlers/: chat.rs  peer_search.rs  profile.rs  replicated.rs
nodes/satelite/: Cargo.toml
nodes/satelite/src/: main.rs
nodes/server/: Cargo.toml
nodes/server/src/: handlers.rs  main.rs  tests.rs
nodes/server/src/handlers/: chat.rs  profile.rs  replicated.rs  retry.rs
nodes/storage/: Cargo.toml
nodes/topology-vis/: Cargo.toml  build.sh  index.html
nodes/topology-vis/src/: main.rs
tests/init-transfer/: Cargo.toml
tests/init-transfer/src/: main.rs
tests/runner/: Cargo.toml
tests/runner/src/: main.rs
ui-proto/: index.html
utils/berkleamp-welch/: Cargo.toml  build.rs
utils/berkleamp-welch/src/: galois.rs  lib.rs  math.rs
utils/chain-api/: Cargo.toml
utils/chain-api/src/: lib.rs
utils/chat-logic/: Cargo.toml
utils/chat-logic/src/: impls.rs  lib.rs
utils/chat-logic/src/impls/: search_peers.rs  storage.rs
utils/chat-logic/src/impls/storage/: chat.rs  nodes.rs  profile.rs
utils/codec-derive/: Cargo.toml
utils/codec-derive/src/: lib.rs
utils/component-utils/: Cargo.toml
utils/component-utils/src/: codec.rs  handler.rs  kad.rs  lib.rs  merkle_tree.rs  stream.rs
utils/config/src/: lib.rs
utils/contract_macro/: Cargo.toml
utils/contract_macro/src/: lib.rs
utils/crypto/: Cargo.toml
utils/crypto/src/: enc.rs  hash.rs  lib.rs  sign.rs
utils/falcon/: .gitignore  Cargo.toml  api_stubs.rs  lib.rs  libc_stubs.rs  shake_stubs.rs  transpile.sh
utils/falcon/.cache/clangd/index/: api.h.72EF8A883E1A03D4.idx  codec.c.782322B4AA670060.idx  common.c.6EAC0105AB950CBF.idx  fft.c.EB14B7840BDD48C7.idx  fips202.h.847B3EE4E04E45B8.idx  fpr.c.E476F854C7D045A9.idx  fpr.h.8AD012FDC6DACAF9.idx  inner.h.CD42DEBDE4886280.idx  keygen.c.4CDEB0DECD0C363E.idx  pqclean.c.4DBB4DE2586BC021.idx  randombytes.h.B1803709105DFF5D.idx  rng.c.9AC4D92ACEF191DA.idx  sign.c.74754DE18A37B5BA.idx  vrfy.c.D0C77178783A1F01.idx
utils/falcon/falcon/: lib.rs
utils/falcon/falcon/src/: common.rs  fft.rs  keygen.rs  pqclean.rs  rng.rs  sign.rs
utils/falcon/src/: codec.rs  common.rs  fft.rs  fpr.rs  keygen.rs  pqclean.rs  rng.rs  sign.rs  vrfy.rs
utils/galois/: Cargo.toml  build.rs
utils/galois/src/: lib.rs
utils/indexed_db/: Cargo.toml
utils/indexed_db/src/: lib.rs
utils/kyber/: Cargo.toml
utils/kyber/src/: barrett.rs  cbd.rs  indcpa.rs  kem.rs  lib.rs  mondgomery.rs  ntt.rs  poly.rs  polyvec.rs  symetric.rs
utils/merkle-tree/: Cargo.toml
utils/merkle-tree/src/: lib.rs
utils/onion/: Cargo.toml
utils/onion/src/: behaviour.rs  get_key.rs  handler.rs  lib.rs  packet.rs  tests.rs
utils/primitives/: Cargo.toml
utils/primitives/src/: chat.rs  contracts.rs  lib.rs
utils/protocols/: Cargo.toml
utils/protocols/src/: chat.rs  contracts.rs  lib.rs
utils/topology-wrapper/: Cargo.toml
utils/topology-wrapper/src/: lib.rs
utils/websocket-websys/: Cargo.toml
utils/websocket-websys/src/: lib.rs
whitepaper/: book.toml  package-lock.json
whitepaper/src/: chapter_1.md  storage.md
