[workspace]
resolver = "2"
members = [
	"nodes/*",
	"utils/*",
	"tests/*",
	"contracts/*",
	"forked/*",
]
exclude = [
	"forked/substrate-contracts-node",
	"forked/substrate-node-template",
]

[profile.native-optimized]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-optimized]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
