[package]
name = "chat-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
component-utils = { version = "0.1.0", path = "../../utils/component-utils", features = ["std"] }
crypto = { version = "0.1.0", path = "../crypto", features = ["std"] }
libp2p = { version = "0.53.1", features = ["macros", "kad"] }
log = "0.4.20"
onion = { version = "0.1.0", path = "../onion" }
primitives = { version = "0.1.0", path = "../primitives" }
rpc = { version = "0.1.0", path = "../rpc" }
thiserror = "1.0.50"
