[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component-utils = { version = "0.1.0", path = "../../utils/component-utils", default-features = false }
crypto = { version = "0.1.0", path = "../crypto", default-features = false }
log = "0.4.20"
thiserror = { version = "1.0.50", optional = true }

[features]
default = ["std"]
std = ["component-utils/std", "crypto/std", "crypto/getrandom", "thiserror"]
