[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component-utils = { version = "0.1.0", path = "../../utils/component-utils" }
libp2p = { version = "0.53.1" }
log = "0.4.20"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt", "time"] }
libp2p = { version = "0.53.1", features = ["noise", "yamux", "tcp", "kad", "macros", "tokio"]}
env_logger = "0.10.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
