[package]
name = "storage-spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
crypto = { version = "0.1.0", path = "../crypto" }
futures = "0.3.30"
galois = { version = "6.0.0", path = "../../utils/galois", features = ["simd-accel"] }

[dev-dependencies]
getrandom = "0.2.12"
