[package]
name = "chain-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chain-api = { version = "0.1.0", path = "../../utils/chain-api" }
component-utils = { version = "0.1.0", path = "../../utils/component-utils", default-features = false }
config = { version = "0.1.0", path = "../../utils/config" }
crypto = { version = "0.1.0", path = "../../utils/crypto" }
hex = "0.4.3"
tokio = { version = "1.33.0", features = ["rt", "macros"] }
