[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
chain-api = { version = "0.1.0", path = "../../core/chain-api", features = ["native"] }
chat-logic = { version = "0.1.0", path = "../../core/chat-logic" }
component-utils = { version = "0.1.0", path = "../../utils/component-utils" }
config = { version = "0.1.0", path = "../../utils/config" }
crypto = { version = "0.1.0", path = "../../core/crypto" }
env_logger = "0.10.0"
libp2p = { version = "0.53.0", features = ["tcp", "noise", "macros", "tokio", "yamux", "websocket", "dns"] }
log = "0.4.20"
mini-dht = { version = "0.1.0", path = "../../core/mini-dht" }
onion = { version = "0.1.0", path = "../../core/onion" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rpc = { version = "0.1.0", path = "../../core/rpc" }
smallvec = "1.11.1"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["rt", "macros", "time"] }
topology-wrapper = { version = "0.1.0", path = "../../utils/topology-wrapper" }
