[package]
name = "init-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-api = { version = "0.1.0", path = "../../core/chain-api" }
config = { version = "0.1.0", path = "../../utils/config" }
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
