[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
hex = "0.4.3"
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "getrandom"] }
