[package]
name = "chain-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
component-utils = { version = "0.1.0", path = "../component-utils" }
contract-macro = { version = "0.1.0", path = "../contract_macro" }
contract-transcode = "3.2.0"
crypto = { version = "0.1.0", path = "../crypto" }
futures = { version = "0.3.29", features = ["executor"] }
hex = "0.4.3"
ink_metadata = "4.3.0"
parity-scale-codec = "3.6.5"
protocols = { version = "0.1.0", path = "../protocols" }
scale-encode = "0.5.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
subxt = { version = "0.32.1" }
subxt-signer = { version = "0.32.1", features = ["subxt"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros"] }
