[package]
name = "codec-derive"
version = "0.0.0"
authors = ["mlokr <jdoka@crownsterling.io>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.44"

