[package]
name = "component-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", features = ["serde"] }
futures = "0.3.28"
libp2p-core = { version = "0.40.1", optional = true }
libp2p-identity = { version = "0.2.3", features = ["peerid", "rand"], optional = true }
libp2p-kad = { version = "0.44.5", optional = true }
libp2p-swarm = { version = "0.43.6", optional = true }

[features]
default = ["kad"]
kad = ["libp2p-kad", "libp2p-identity", "libp2p-core", "libp2p-swarm"]
