[package]
name = "component-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
futures = { version = "0.3.28", optional = true }
libp2p = { version = "0.53.0", features = ["kad"], optional = true }
thiserror = "1.0.50"

[features]
default = ["std"]
std = ["futures", "libp2p", "arrayvec/serde", "arrayvec/std"]
