[package]
name = "onion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
component-utils = { version = "0.1.0", path = "../component-utils", no-default-features = true }
futures = "0.3.28"
instant = "0.1.12"
libp2p-core = "0.40.1"
libp2p-identity = { version = "0.2.3", features = ["peerid", "ed25519"] }
libp2p-kad = { version = "0.44.5", optional = true }
libp2p-swarm = "0.43.4"
log = "0.4.20"
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }
thiserror = "1.0.50"
void = "1.0.2"
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "getrandom"] }

[dev-dependencies]
env_logger = "0.10.0"
libp2p = { version = "0.52.3", features = ["tokio", "tcp", "noise", "yamux", "macros"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "time"] }

[features]
default = ["kad"]
kad = ["libp2p-kad", "component-utils/kad"]
wasm = ["instant/wasm-bindgen"]
