[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component-utils = { version = "0.1.0", path = "../component-utils" }
crypto = { version = "0.1.0", path = "../crypto" }
hex = "0.4.3"
