[package]
name = "websocket-websys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
js-sys = "0.3.64"
libp2p-core = "0.40.1"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "CloseEvent",
  "WebSocket",
]
